# mqtt-forwarder-bsc

./: .gitignore  .gitmodules  CMakeLists.txt
demo/: consumer.cpp  forwarder_bsc.cpp
include/: ClassAggregatorMessage.h  Forwarder.h  LogWriter.h  Receiver.h
scripts/: download_configuration_data.sh
src/: ClassAggregatorMessage.cpp  Forwarder.cpp  LogWriter.cpp  Receiver.cpp
